# brain-decoder

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: deploy-space.yml  update-notebooks.yml
braindec/: __init__.py  classifier.py  cogatlas.py  dataset.py  embedding.py  fetcher.py  loss.py  main.py  metrics.py  model.py  plot.py  predict.py  preproc.py  train.py  utils.py
braindec/autoencoder/: __init__.py  classifier.py  model.py  train.py
docs/: api.rst  conf.py  index.rst  installation.rst  make_notebooks.py  quickstart.rst
docs/auto_examples/: 02_niclip_demo.ipynb
examples/: 00_embedding.ipynb  01_dataset.ipynb  02_niclip_demo.py  README.rst
jobs/: baseline_train.py  clean_ace_extraction.py  create_nimare_dset.py  decoding.py  decoding_cnp.py  decoding_eval.py  decoding_eval_subject.py  decoding_hcp_nv.py  decoding_hcp_surf.py  decoding_ibc.py  decoding_meta.py  decoding_seeds.py  decoding_surface.py  image_embedding.py  image_embedding.sh  text_embedding.py  text_embedding.sh  utils.py  vocabulary_embedding.py  vocabulary_prior.py
tests/: test_app.py  test_embedding.py  test_predict.py
