[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "braindec"
description = "Brain image decoder"
license = { file = "LICENSE" }
authors = [{ name = "Braindec developers" }]
maintainers = [{ name = "Julio A Peraza", email = "jperaza@fiu.edu" }]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "torch",
    "torchvision",
    "torchaudio",
    "nimare",
    "xgboost",
    "transformers",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/JulioAPeraza/braindec"
Documentation = "https://braindec.readthedocs.io/en/latest/"

[project.optional-dependencies]
doc = [
    "sphinx>=2.0",
    "sphinx_rtd_theme",
    "sphinx-argparse",
    "sphinx-copybutton",
    "sphinx-gallery",
]

dev = ["black", "pre-commit", "isort", "flake8-pyproject"]
# For testing of oldest usable versions of dependencies.
min = ["nimare==0.2.1"]
test = [
    "coverage",
    "coveralls",
    "flake8-black",
    "flake8-docstrings",
    "flake8-isort",
    "flake8-pyproject",
    "pytest",
    "pytest-cov",
    "pytest-env",
]
# Aliases
docs = ["braindec[doc]"]
devs = ["braindec[dev]"]
tests = ["braindec[test]"]
minimum = ["braindec[min]"]
all = ["braindec[doc,dev,test]"]

[tool.hatch.build.targets.wheel]
packages = ["braindec"]
exclude = ["temp"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "braindec/_version.py"

[tool.flake8]
max-line-length = 99
exclude = ["*build/", "braindec/_version.py"]
ignore = ["E203", "E402", "E722", "W503"]
per-file-ignores = """
    */__init__.py:D401
    braindec/utils.py:D401
"""
docstring-convention = "numpy"

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.black]
line-length = 99
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.github
    | \.hg
    | \.pytest_cache
    | _build
    | build
    | dist
  )/
  | versioneer.py
  | braindec/_version.py
)
'''
